--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -7,8 +7,8 @@ on:
       - main
       - 'feature/*'
 env:
-  MONGO_URI: mongodb+srv://supercluster.d83jj.mongodb.net/superData
-  MONGO_USERNAME: superuser
+  MONGO_URI: ${{ vars.MONGO_URI }}
+  MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}     
 jobs:
     unit-testing:
