--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -22,6 +22,12 @@ jobs:
           uses: actions/setup-node@v3
           with:
             node-version: 20
+        
+        - name: Cache NPM Dependencies
+          uses: actions/cache@v3
+          with:
+            path: ~/.npm
+            key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
     
         - name: Install Dependencies
           run: npm install
