--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -23,7 +23,7 @@ jobs:
           with:
             node-version: 20
         
-        - name: Cache NPM Dependencies
+        - name: Cache NPM dependencies
           uses: actions/cache@v3
           with:
             path: ~/.npm
