--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -66,7 +66,7 @@ jobs:
             path: coverage
             retention-days: 5
     docker:
-        permission:
+        permissions:
           packages: write
         name: docker
         needs: [unit-testing, code-coverage ]
