--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -12,10 +12,10 @@ env:
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}     
 jobs:
     unit-testing:
-        name: unit-testing
+        name: Unit Testing
         runs-on: ubuntu-latest
-        container:
-          image: 'node:20'
+        container: #added
+          image: 'node:20' #added
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
