--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -87,3 +87,24 @@ jobs:
             context: .
             push: true
             tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{github.sha}}
+    
+    dev-deploy:
+        needs: docker
+        environment:
+          name: development
+          url: https://github.com/
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout Repo
+            uses: actions/checkout@v4
+          - name: Install kubectl CLI
+            uses: azure/setup-kubectl@v3 
+            with:
+              version: 'v1.26.0'
+          - name: Set kubeconfig file
+            uses: azure/k8s-set-context@v3
+            with:
+              method: kubeconfig
+              kubeconfig: ${{ secrets.KUBECONFIG }}
+          - name: Fetch kubectl details version
+            run: kubectl version --short -o yaml
