--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -107,7 +107,11 @@ jobs:
               method: kubeconfig
               kubeconfig: ${{ secrets.KUBECONFIG }}
           - name: Fetch kubectl details version
-            run: kubectl version --short -o yaml
+            run: |
+            kubectl version --short 
+            echo ----------------------
+            kubectl get nodes
+            
           - name: Fetch Nginx Ingress Controller IP 
             run: |
             echo "INGRESS_IP=$(kubectl -n ingress-nginx get services ingress-nginx-controller -o jsonpath="{.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
