--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -108,11 +108,9 @@ jobs:
               kubeconfig: '${{ secrets.KUBECONFIG }}'
           - run: kubectl version --short -o yaml
             continue-on-error: true
-
           - name: Fetch Nginx Ingress Controller IP 
             run: |
-              echo "INGRESS_IP=$(kubectl -n ingress-nginx get services ingress-nginx-controller -o jsonpath="{.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
-
+              echo "INGRESS_IP=$(kubectl -n ingress-nginx get services ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')" >> $GITHUB_ENV
           - name: Replace Token in manifest files
             uses: cschleiden/replace-tokens@v1
             with:
