Added Mongo password

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -125,6 +125,18 @@ jobs:
               INGRESS_IP: ${{ env.INGRESS_IP }}
           - name: Check Files
             run: cat kubernetes/development/*.yaml
+          - name: Create Mongo Secret 
+            run : |
+               kubectl -n ${{ vars.NAMESPACE }} create secret generic mongo-db-creds \
+               --from-literal=MONGO_URL=${{ env.MONGO_URI }} \
+               --from-literal=MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
+               --from-literal=MONGO_PASSWORD=${{ env.MONGO_PASSWORD }} \
+               -- save-config \
+               -- dry-run = client \
+               - o yaml | kubectl apply -f -
+          - name: Deploy to Dev Env 
+            run : | 
+                kubectl apply -f kubernetes/development
           - name: Set APP Ingress Host URL 
             id: set-ingress-host-address
             run: |
